<resources>
    <string name="app_name">Pronostico de partidos</string>
    <string name="volver">Volver</string>
    <string name="tabla_de_posiciones">Tabla de posiciones</string>
    <string name="puntos">Puntos</string>
    <string name="pos">Pos.</string>
    <string name="participante">Participante</string>

    <string name="imagen_de_copa">Imagen de copa</string>
    <string name="imagen_de_encabezado">Imagen de encabezado</string>
    <string name="clasificacion">Clasificacion</string>
    <string name="pronostico">Pronostico</string>
    <string name="mi_perfil">Mis pronosticos</string>
    <string name="actualizar_puntajes">Actualizar puntajes</string>
    <string name="administrar_partidos">Administrar partidos</string>
    <string name="salir">Salir</string>
    <string name="fondo_encabezado">Fondo encabezado</string>
    <string name="fondo_inferior">Fondo inferior</string>
    <string name="bienvenido">Bienvenido,</string>
    <string name="mis_pronosticos">Mis pronosticos</string>
    <string name="tabla_de_clasificacion">Tabla de posiciones</string>
    <string name="administrador">Administrador</string>

    <string name="abrir_menu">Abre menu</string>
    <string name="cerar_menu">Cierra menu</string>
    <string name="imagen_de_perfil">imagen de perfil</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="fase_del_torneo">Fase del Torneo</string>
    <string name="pron_sticos">Pronósticos</string>
    <string name="actualizar_puntaje">Actualizar puntaje</string>
    <string-array name="fases_torneo">
        <item>Fase de grupos</item>
        <item>Dieciseisavos</item>
        <item>Octavos</item>
        <item>Cuartos de final</item>
        <item>Semifinales</item>
        <item>Tercer lugar</item>
        <item>Final</item>
    </string-array>
</resources>