<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="181dp"
        android:padding="1dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:contentDescription="@string/imagen_de_encabezado"
            app:srcCompat="@drawable/tabla_background" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|top"
            android:background="@android:color/transparent"
            android:contentDescription="@string/abrir_menu"
            android:maxWidth="48dp"
            android:minWidth="48dp"
            android:padding="12dp"
            android:scaleType="center"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="395dp"
        android:layout_height="534dp"
        android:layout_margin="25dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978">

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imagen_de_copa"
                app:srcCompat="@drawable/copa" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="243dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="center|left"
                android:text="@string/tabla_de_posiciones"
                android:textColor="#04125B"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="478dp"
            android:paddingTop="10dp"
            android:stretchColumns="0,1,2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/table_header_bg">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pos"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/participante"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/puntos"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btnVolver"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/volver"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>