<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalAdministrador">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="fill_horizontal|top">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="175dp"
                android:contentDescription="@string/fondo_encabezado"
                app:srcCompat="@drawable/encabezado_background"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:id="@+id/lyBienvenida"
                android:layout_width="238dp"
                android:layout_height="140dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenido"
                    android:textSize="20sp" />

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="359dp"
            android:orientation="vertical"
            android:padding="25dp">

            <Button
                android:id="@+id/btnAdministrarPartidos"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#664BF807"
                android:insetBottom="20dp"
                android:onClick="adminstrarPartidos"
                android:text="@string/administrar_partidos"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnActualizarPuntajes"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#664BF807"
                android:insetBottom="20dp"
                android:onClick="actualizarPartidos"
                android:text="@string/actualizar_puntajes"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSalir"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#664BF807"
                android:insetBottom="20dp"
                android:onClick="salir"
                android:text="@string/salir"
                android:textSize="20sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="182dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/fondo_inferior"
                app:srcCompat="@drawable/button_backgroundv2"
                tools:ignore="ImageContrastCheck" />
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>