<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="186dp"
            android:padding="1dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:contentDescription="@string/imagen_de_encabezado"
                app:srcCompat="@drawable/encabezado_background"
                tools:ignore="VisualLintBounds" />

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start|top"
                android:background="@android:color/transparent"
                android:contentDescription="@string/abrir_menu"
                android:maxWidth="48dp"
                android:minWidth="48dp"
                android:padding="25dp"
                android:paddingStart="25dp"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

            <LinearLayout
                android:layout_width="293dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom|start"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|start"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/imagen_de_copa"
                    app:srcCompat="@drawable/copa" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="243dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="center|left"
                    android:text="@string/tabla_de_posiciones"
                    android:textColor="#04125B"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </FrameLayout>

        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:padding="25dp">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/table_header_bg">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/pos"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/participante"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/puntos"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>
        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="500dp"
                android:layout_height="177dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/button_backgroundv2" />

            <Button
                android:id="@+id/btnVolver"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center|start"
                android:minHeight="48dp"
                android:text="@string/volver"
                tools:ignore="TouchTargetSizeCheck" />
        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>